--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,11 @@ trim_trailing_whitespace = true
 [*.html]
 indent_style = space
 indent_size = 2
+
+[*.ejs]
+indent_style = space
+indent_size = 2
+
+[*.js]
+indent_style = space
+indent_size = 2
