--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
     "prettier": "3.0.3",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
-    "build:css": "tailwindcss build -i src/input.css -o static/output.css"
+    "build:css": "tailwindcss -i src/input.css -o static/output.css"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.6"
   }
 }
